# frametree-bids

./: .gitignore  README.md  README.rst  conftest.py  pyproject.toml
.github/workflows/: ci-cd.yml  tests.yml
arcana/analysis/bids/tasks/: app.py
arcana/analysis/bids/tasks/tests/: test_run_bids_app.py
arcana/bids/: __init__.py  _version.py  data.py  tasks.py
arcana/bids/analysis/tasks/: app.py
arcana/bids/analysis/tasks/tests/: test_run_bids_app.py
arcana/bids/data/: dataset.py  structure.py
arcana/bids/data/tests/: test_bids.py
arcana/bids/tests/: test_cli.py  test_data.py  test_run_bids_app.py
arcana/data/bids/: dataset.py  structure.py
arcana/data/bids/tests/: test_bids.py
frametree/bids/: _version.py  store.py  tasks.py
frametree/bids/tests/: test_cli.py  test_data.py
