[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "arcana-bids"
description = "Description for arcana-bids goes here"
readme = "README.rst"
requires-python = ">=3.8"
dependencies = ["arcana >=2.0b"]
license = {file = "LICENSE"}
authors = [{name = "YOUR-NAME", email = "YOUR-EMAIL"}]
maintainers = [{name = "YOUR-NAME", email = "YOUR-EMAIL"}]
keywords = ["arcana"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
]
doc = [
    "packaging",
    "docutils>=0.10",
    "mock>1.0",
    "sphinx >=2.1.2",
    "sphinx-argparse>=0.2.0",
    "sphinx-click>=3.1",
    "furo>=2022.2.14.1",
    "numpydoc>=0.6.0",
]
test = [
    "pytest >= 4.4.0",
    "pytest-cov",
    "pytest-env",
    "codecov",
]

[tool.flit.module]
name = "arcana"

[tool.flit.metadata]
namespace = "arcana"
namespace_packages = [
    "analysis.bids",
    "cli.bids",
    "data.bids",
    "deploy.bids",
    "utils.bids"
]

[tool.flit.sdist]
exclude = [".gitignore"]

[tool.setuptools_scm]
write_to = "arcana/utils/bids/_version.py"

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = "_version.py"

[tool.codespell]
ignore-words = ".codespell-ignorewords"
